Adds more supported devices
Change-type: minor
