# lib/endpoints.js
@@ -3,6 +3,7 @@ const debug = require("debug")("endpoints");
 module.exports = async function (app, sdk, wol) {
   app.post("/wake/mac", (req, res) => {
     // #swagger.description = 'Wake device via MAC Address.'
+    // #swagger.tags = ['Wake']
     /* #swagger.responses[200] = {
                          description: 'Successful request',
                          schema: {
@@ -35,8 +36,13 @@ module.exports = async function (app, sdk, wol) {
   });
 
   app.post("/wake/uuid", (req, res) => {
-    // #swagger.description = 'Wake device via UUID.'
-    /* #swagger.responses[200] = {
+    /*  #swagger.description = 'Wake device via UUID.'
+        #swagger.tags = ['Wake']
+        #swagger.parameters['uuid'] = {
+                in: 'query',
+                description: 'Device UUID'
+        }
+        #swagger.responses[200] = {
                          description: 'Successful request',
                          schema: {
                              "properties": {
@@ -53,6 +59,7 @@ module.exports = async function (app, sdk, wol) {
 
   app.get("/mac", async (req, res) => {
     // #swagger.description = 'Get all MAC addresses for devices in fleet'
+    // #swagger.tags = ['MAC']
     /* #swagger.responses[200] = {
                          description: 'Successful request',
                          schema: {
